# django-itrust

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
django_itrust/: admin.py  app_settings.py  apps.py  authentication.py  models.py
django_itrust/saml_config/attribute_maps/: saml_uri.py  shibboleth_uri.py
django_itrust/tests/: factories.py
