[tool.poetry]
name = "django-itrust"
version = "0.1.1"
description = ""
authors = ["Josh Asplund <asplund3@illinois.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = ">=3.2"
djangosaml2 = "^1.5.1"

[tool.poetry.dev-dependencies]
mypy = "*"
mypy-extensions = "*"
django-stubs = "*"
pytest = "*"
pytest-django = "*"
pytest-factoryboy = "*"
pre-commit = "^2.20.0"
isort = "^5.12.0"
flakeheaven = "^3.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
exclude = [".venv", ".git", "**/migrations/*"]
show_source = true
format = "grouped"

# list of plugins and rules for them
[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E501", "-W503", "-E266"]
pyflakes = ["+*", "-F403", "-F405"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

[tool.isort]
profile = "black"
